<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <Button
                android:id="@+id/btnUyg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg1"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/uyg1_isim" />

            <Button
                android:id="@+id/btnUyg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg2"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/uyg2_isim" />

            <Button
                android:id="@+id/btnUyg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg3"
                android:text="@string/uyg3_isim" />

            <Button
                android:id="@+id/btnUyg4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg4"
                android:text="@string/uyg4_isim" />

            <Button
                android:id="@+id/btnUyg5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg5"
                android:text="@string/uyg5_isim" />

            <Button
                android:id="@+id/btnUyg6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg6"
                android:text="@string/uyg6_isim" />

            <Button
                android:id="@+id/btnUyg7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg7"
                android:text="@string/uyg7_isim" />

            <Button
                android:id="@+id/btnUyg8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg8"
                android:text="@string/uyg8_isim" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <Button
                android:id="@+id/btnUyg9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg9"
                android:text="@string/uyg9_isim" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg10"
                android:text="@string/uyg10_isim" />

            <Button
                android:id="@+id/btnUyg11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg11"
                android:text="@string/uyg11_isim" />

            <Button
                android:id="@+id/btnUyg12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg12"
                android:text="@string/uyg12_isim" />

            <Button
                android:id="@+id/btnUyg13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUyg13"
                android:text="@string/uyg13_isim" />

            <Button
                android:id="@+id/btnSS165"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnSS165"
                android:text="@string/ss165" />

            <Button
                android:id="@+id/btnSS168"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnSS168"
                android:text="@string/ss168" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>